--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
@@ -20,6 +21,7 @@
     "react-smooth": "^2.0.0",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
+    "uninstall": "0.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
