--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,16 +12,19 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
-    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
+    "react-rellax": "^1.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-horizontal": "^1.6.6",
+    "react-scroll-lock-component": "^1.2.0",
+    "react-scroll-parallax": "^2.4.0",
     "react-smooth": "^2.0.0",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
-    "uninstall": "0.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
