--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scroll-horizontal": "^1.6.6",
     "react-scroll-parallax": "^2.4.0",
     "react-smooth": "^2.0.0",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
     "web-vitals": "^1.1.2"
