Finishing Reading Section

--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.2.1",
     "react-icons": "^4.3.1",
     "react-modal-video": "^1.2.8",
     "react-redux": "^7.2.5",
     "react-rellax": "^1.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-scroll-horizontal": "^1.6.6",
     "react-scroll-parallax": "^2.4.0",
     "react-smooth": "^2.0.0",
     "react-tooltip": "^4.2.21",
