--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-rellax": "^1.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-lock-component": "^1.2.0",
     "react-scroll-parallax": "^2.4.0",
     "react-smooth": "^2.0.0",
     "react-tooltip": "^4.2.21",
